--- a/README.org
+++ b/README.org
@@ -9,7 +9,11 @@ Thanks to @mseri for offering to do code review.
 If you find any mistakes or want to improve code snippets, please submit a PR.
 
 ** Completed work:
-- Chapters 1 through 11 are available in the pdf format here: https://github.com/hmemcpy/milewski-ctfp-pdf/pull/201
+- Chapters 1 through 12 are available in the pdf format here: https://github.com/hmemcpy/milewski-ctfp-pdf/pull/201
 
 ** TODO:
-- I am currently using a modified version of `mdx` to move snippets from this repo to the book repo - https://github.com/ArulselvanMadhavan/milewski-ctfp-pdf/tree/ocaml . Need to automate this and make it part of makefile
+- I am currently using a modified version of `mdx` to move snippets
+  from this repo to the book repo -
+  https://github.com/ArulselvanMadhavan/milewski-ctfp-pdf/tree/ocaml .
+  Need to automate this and make it part of makefile
+- Need help in resolving merge conflicts in the PR - https://github.com/hmemcpy/milewski-ctfp-pdf/pull/201
